feat(docker): update base images to Java 25 and optimize JVM options
Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>